src/objects/FeeTable__c.object
<CustomObject>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:05 AM</fullName>
                </value>
                <value>
                    <fullName>12:10 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:20 AM</fullName>
                </value>
                <value>
                    <fullName>12:25 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:35 AM</fullName>
                </value>
                <value>
                    <fullName>12:40 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:50 AM</fullName>
                </value>
                <value>
                    <fullName>12:55 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:05 AM</fullName>
                </value>
                <value>
                    <fullName>1:10 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:20 AM</fullName>
                </value>
                <value>
                    <fullName>1:25 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:35 AM</fullName>
                </value>
                <value>
                    <fullName>1:40 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:50 AM</fullName>
                </value>
                <value>
                    <fullName>1:55 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:05 AM</fullName>
                </value>
                <value>
                    <fullName>2:10 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:20 AM</fullName>
                </value>
                <value>
                    <fullName>2:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FeeCategory__c</fullName>
        <label>Fee Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly Care</fullName>
                </value>
                <value>
                    <fullName>Overnight Care</fullName>
                </value>
                <value>
                    <fullName>24 Hour Care</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FeeRate__c</fullName>
        <label>Fee Rate</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FeeTableLookup__c</fullName>
        <formula>Name  &amp;  Text(Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Table Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncGST__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Inc GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
                <value>
                    <fullName>MNC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentFeeTable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Fee Table</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FeeTable__c.Name</field>
                <operation>contains</operation>
                <value>Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FeeTable__c</referenceTo>
        <relationshipLabel>Fee Tables</relationshipLabel>
        <relationshipName>FeeTables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodofService__c</fullName>
        <label>Period of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weeknights</fullName>
                </value>
                <value>
                    <fullName>Overlap Between Shifts</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Public Holidays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecificGrade__c</fullName>
        <label>Specific Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:05 AM</fullName>
                </value>
                <value>
                    <fullName>12:10 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:20 AM</fullName>
                </value>
                <value>
                    <fullName>12:25 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:35 AM</fullName>
                </value>
                <value>
                    <fullName>12:40 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:50 AM</fullName>
                </value>
                <value>
                    <fullName>12:55 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:05 AM</fullName>
                </value>
                <value>
                    <fullName>1:10 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:20 AM</fullName>
                </value>
                <value>
                    <fullName>1:25 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:35 AM</fullName>
                </value>
                <value>
                    <fullName>1:40 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:50 AM</fullName>
                </value>
                <value>
                    <fullName>1:55 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:05 AM</fullName>
                </value>
                <value>
                    <fullName>2:10 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:20 AM</fullName>
                </value>
                <value>
                    <fullName>2:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fee Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ParentFeeTable__c</columns>
        <columns>Location__c</columns>
        <columns>FeeCategory__c</columns>
        <columns>SpecificGrade__c</columns>
        <columns>PeriodofService__c</columns>
        <columns>FeeRate__c</columns>
        <columns>IncGST__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fee Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Tables</pluralLabel>
    <recordTypes>
        <fullName>FeeTable</fullName>
        <active>true</active>
        <label>Fee Table</label>
    </recordTypes>
    <recordTypes>
        <fullName>ParentFeeTable</fullName>
        <active>true</active>
        <label>Parent Fee Table</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>